src/test/deca/syntax/invalid/syntax-oubliPointVirgule.synt
syntax-oubliPointVirgule.deca:17: